--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,14 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# others
-*.extract
+# idea
 *.idea
+*.iml
+
+target/
 *.mvn
 *db
+
+# others
+*.extract
+.DS_Store
